--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://WomenWired.github.io/womenwiredglobe",
   "name": "womenwiredglobe",
   "version": "0.1.0",
   "private": true,
@@ -8,7 +9,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "gh-pages": "^3.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-globe": "^4.0.0",
@@ -40,7 +40,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "gh-pages": "^3.2.3"
   },
   "keywords": [],
   "description": ""
