--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://WomenWired.github.io/womenwiredglobe",
+  "homepage": "http://womenwired.github.io/womenwiredglobe/",
   "name": "womenwiredglobe",
   "version": "0.1.0",
   "private": true,
